# generate-wordlist-from-webpage

./: Cargo.toml  README.md
httpserver/: index.html  index.html.bak
src/: main.rs
