[package]
name = "generate_wordlist_from_website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "cookies"]}
clap = { version = "3.1.10", features = ["derive"] }